@@ -56,7 +56,7 @@
 		<dependency>
 			<groupId>com.tngtech.archunit</groupId>
 			<artifactId>archunit-junit5</artifactId>
-			<version>0.19.0</version>
+			<version>1.2.1</version>
 		</dependency>
 	</dependencies>
 
